added "minimum-stability": "dev",

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "iamhimansu/array-query",
     "description": "Perform query on array data",
+    "minimum-stability": "dev",
     "type": "library",
     "license": "MIT",
     "autoload": {
